--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,6 +3,11 @@
 
 .about {
 
+    header {
+        background-color: transparent;
+    }
+
+
     // ページ全体共通
     section {
         margin-bottom: 120px;
@@ -94,6 +99,9 @@
             bottom: -100px;
             z-index: 0;
 
+            @include mx.tb {
+                left: 30px;
+            }
             @include mx.sp {
                 font-size: 80px;
                 left: 10px;
@@ -109,11 +117,14 @@
                 content: "";
                 position: absolute;
                 bottom: -10px;
-                width: 30%;
+                width: 150px;
                 height: 2px;
                 background-color: $yellow;
                 border-radius: 2px;
 
+                @include mx.tb {
+                    left: 1%;
+                }
             }
         }
     }
@@ -146,6 +157,12 @@
             border-style: solid;
             border-width: 50px 90px 0px 90px;
             border-color: $blue transparent transparent transparent;
+
+            @include mx.sp {
+                border-width:30px 50px 0px 50px;
+            }
+
+
         }
     }
 
@@ -279,7 +296,7 @@
                         content: "";
                         position: absolute;
                         left: 50%;
-                        top: 50%;
+                        top: 44%;
                         width: 38px;
                         height: 2px;
                         background: $white;
@@ -341,13 +358,14 @@
 
                 .button {
                     position: absolute;
-                    right:0;
+                    right: 0;
                     margin-top: 15px;
                     display: grid;
-                    
+
                     @include mx.sp {
                         margin-top: 0px;
                     }
+
                     button {
                         width: 225px;
                         background: $white;
@@ -423,22 +441,20 @@
                     border-style: solid;
                     border-width: 30px 95px 0px 95px;
                     border-color: #c8d6df transparent transparent transparent;
-                    z-index: 10;
+                    z-index: 5;
 
+                    @include mx.tb-1100{
+                        border-width: 15px 90px 0px 90px;
+                    }
                     @include mx.tb {
-                        border-width: 15px 80px 0px 80px;
+                        border-width: 15px 75px 0px 75px;
                     }
 
+                    @include mx.sp-650{
+                        border-width: 15px 50px 0px 50px;
+                    }
                     @include mx.sp {
                         border-width: 15px 40px 0px 40px;
-                    }
-                }
-
-                &:last-of-type {
-                    border-radius: 15px;
-
-                    &::after {
-                        border-width: 0;
                     }
                 }
 
@@ -453,10 +469,10 @@
                         );
 
                     $z: (
-                        9,
-                        8,
-                        7,
-                        6
+                        4,
+                        3,
+                        2,
+                        1
                     );
 
                 background: nth($colors, $i - 1);
@@ -524,7 +540,7 @@
         position: relative;
         padding-inline: 100px;
 
-        @include mx.sp {
+        @include mx.tb {
             padding: 40px 20px 30px;
         }
 
@@ -556,6 +572,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 10px;
+            margin-block: 40px;
 
             @include mx.sp {
                 grid-template-columns: 1fr;
@@ -564,6 +581,12 @@
 
             li {
                 position: relative;
+                margin-left:     80px;
+
+
+            @include mx.tb {
+                margin-left:     40px;
+            }
 
                 &:before {
                     content: "";
@@ -578,9 +601,11 @@
                 }
             }
         }
-        small{
+
+        .small {
             text-align: left;
-            font-size: 0.85rem;
+            font-size: 1.2rem;
+            opacity: 0.5;
         }
     }
 }
