--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -76,6 +76,10 @@ body {
     margin: 0;
 }
 
+ul{
+    padding-left: 0;
+}
+
 li {
     list-style: none;
 }
@@ -188,6 +192,15 @@ img {
     margin-inline: auto;
     padding-inline: 20px;
     margin-bottom: 80px;
+
+    @include mx.tb-1100 {
+        max-width: 1000px;
+        padding-inline: 80px;
+    }
+    @include mx.sp {
+        max-width: 1000px;
+        padding-inline: 20px;
+    }
 }
 
 .inner {
