--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -2,7 +2,6 @@
 @use "./base" as *;
 
 #loading {
-  //鈴木追加
   position: fixed;
   top: 0;
   left: 0;
@@ -21,25 +20,42 @@
 }
 
 .video-bg {
-  //鈴木追加
   position: fixed;
   left: 0;
   top: 0;
   z-index: -100;
   opacity: 0.4;
+
+  video {
+    @include mx.tb {
+      height: 100vh;
+    }
+  }
 }
 
 header {
-  //鈴木追加
   background-color: $white;
 }
 
 .fv {
   width: 100%;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 120px);
   overflow: hidden;
   position: relative;
-  background-color: $white; //鈴木追加
+  background-color: $white;
+
+
+  @include mx.tb-1100 {
+    height: 800px;
+  }
+
+  @include mx.tb {
+    height: 700px;
+  }
+
+  @include mx.sp {
+    height: 500px;
+  }
 
   video {
     width: 92%;
@@ -50,21 +66,22 @@ header {
     margin-inline: auto;
     z-index: -1;
     background-color: $white;
+
+    // @include mx.sp {
+    //   height: 50%;
+    // }
   }
 
   .titles {
-    font-size: 5.5rem;
+    // font-size: 5.5rem;
+    font-size: clamp(2.7rem, 5vw, 6.0rem);
     font-weight: $fw-medium;
-
-    @include mx.tb {
-      font-size: 4rem;
-    }
 
     .title {
       display: inline-block;
       background-color: $white;
       letter-spacing: 0.15rem;
-      padding: 20px 50px;
+      padding: 2% 3%;
 
       .yellow {
         color: $yellow;
@@ -72,8 +89,8 @@ header {
 
       &:nth-child(1) {
         position: absolute;
-        top: 0px;
-        left: 20px;
+        top: -1px;
+        left: 1%;
         border-radius: 0 0 20px 0;
 
         @include mx.tb {
@@ -83,13 +100,24 @@ header {
 
       &:nth-child(3) {
         position: absolute;
-        top: 130px;
-        left: 20px;
+        top: 15%;
+        left: 1%;
         border-radius: 0 0 20px 0;
 
+        @include mx.tb-1100 {
+          top: 13%;
+        }
+
         @include mx.tb {
-          top: 100px;
-          left: 10px;
+          top: 10%;
+        }
+
+        @include mx.sp-650 {
+          top: 7.5%;
+        }
+
+        @include mx.sp {
+          top: 9%;
         }
       }
     }
@@ -107,6 +135,10 @@ header {
       right: 10px;
     }
 
+    @include mx.sp {
+      padding: 10px;
+    }
+
     .line {
       font-size: 3rem;
       color: $white;
@@ -118,6 +150,10 @@ header {
 
       @include mx.tb {
         font-size: 2rem;
+      }
+
+      @include mx.sp {
+        font-size: 1.5rem;
       }
 
       &:hover {
@@ -133,6 +169,10 @@ header {
   overflow: hidden;
   padding-top: 100px;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); //鈴木追加
+
+  @include mx.sp {
+    padding-top: 50px;
+  }
 
   .scroll-divider {
     position: absolute;
@@ -205,7 +245,7 @@ header {
         background-color: $white;
         border-radius: 20px;
         box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
-        padding: 10px;
+        padding: 25px 30px;
 
         img {
           width: 15%;
@@ -229,7 +269,7 @@ header {
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
-          right: 10px;
+          right: 30px;
           border: 1px solid $black;
           border-radius: 50%;
 
@@ -314,7 +354,7 @@ header {
           width: 50%;
           margin-left: 15px;
         }
-        
+
         .middle {
           width: 100%;
 
@@ -363,6 +403,12 @@ header {
 
   .wrapper {
     margin-bottom: 0;
+
+    @include mx.sp {
+      .text {
+        font-size: 1.2rem;
+      }
+    }
   }
 
   .section-title {
@@ -398,6 +444,10 @@ header {
 
       @include mx.tb {
         flex-direction: column;
+      }
+
+      @include mx.sp {
+        margin-bottom: 50px;
       }
 
       .left {
@@ -613,6 +663,7 @@ header {
     @include mx.tb-1100 {
       grid-template-columns: 1fr 1fr;
       gap: 120px 25px;
+      padding-inline: 15%;
     }
 
     @include mx.sp {
@@ -861,10 +912,12 @@ header {
       padding: 5px 20px;
       border-radius: 50px;
       border: 1px solid $black;
+      transition: all 0.5s ease;
 
       &:hover {
         background-color: $yellow;
         color: $white;
+        border: 1px solid $white;
       }
     }
   }
@@ -1115,7 +1168,7 @@ header {
             overflow-x: hidden;
 
             @include mx.sp {
-              font-size: 2.3rem;
+              font-size: 2.0rem;
             }
 
             &:before {
@@ -1145,8 +1198,19 @@ header {
         }
       }
 
+      p {
+        @include mx.sp {
+          margin-bottom: 30px;
+        }
+      }
+
       small {
         font-size: 1.2rem;
+
+        @include mx.sp {
+          font-size: 1rem;
+          line-height: 0.5rem;
+        }
       }
     }
   }
@@ -1165,7 +1229,7 @@ header {
     justify-content: space-between;
     align-items: flex-start;
 
-    @include mx.sp {
+    @include mx.tb {
       flex-direction: column;
       margin-bottom: 0;
     }
@@ -1173,7 +1237,7 @@ header {
     .flex-left {
       width: 30%;
 
-      @include mx.sp {
+      @include mx.tb {
         width: 100%;
       }
     }
@@ -1181,7 +1245,7 @@ header {
     .flex-right {
       width: 70%;
 
-      @include mx.sp {
+      @include mx.tb {
         width: 100%;
       }
 
